--- a/jdownloader-2/docker-compose.yml
+++ b/jdownloader-2/docker-compose.yml
@@ -9,3 +9,6 @@ services:
     volumes:
       - /jdownloader2/config:/config:rw
       - /Media:/output:rw
+    environment: 
+      MYJD_USER: email@email.com
+      MYJD_PASSWORD: password
