--- a/jdownloader-2/docker-compose.yml
+++ b/jdownloader-2/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   jdownloader-2:
     container_name: jdownloader-2
     network_mode: bridge
-    image: daniel0076/jdownloader-2:aarch64-v0.1
+    image: daniel0076/jdownloader-2:latest
     ports:
       - 5800:5800
     volumes:
