--- a/nextcloud/docker_compose.yml
+++ b/nextcloud/docker_compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_DB=nextcloud
       - POSTGRES_USER=postgress
       - POSTGRES_PASSWORD=postgress
-
+        
   app:
     image: nextcloud
     restart: always
@@ -36,3 +36,14 @@ services:
 
     depends_on:
       - db
+  
+  cron:
+    image: nextcloud
+    restart: always
+    volumes:
+      - /NextCloud/nextcloud:/var/www/html
+    entrypoint: /cron.sh
+    depends_on:
+      - db
+      - app  
+      
