Storage Access for addtional drive mounted

--- a/nextcloud/docker_compose.yml
+++ b/nextcloud/docker_compose.yml
@@ -21,6 +21,9 @@ services:
     volumes:
       - /NextCloud/nextcloud:/var/www/html
       - /Media:/mnt/data/d1
+      #execute below script to get full access on external local storage
+      #sudo chown -R www-data:www-data /Media
+      #sudo chmod -R 0750 /Media
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_DB=nextcloud
