--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: qbittorrent
     network_mode: bridge
     environment:
-      - PUID=1000
-      - PGID=1000
+      #- PUID=1000
+      #- PGID=1000
       - TZ=Aisa/Kolkata
       - WEBUI_PORT=8082
     volumes:
