--- a/owncloud/docker-compose.yml
+++ b/owncloud/docker-compose.yml
@@ -36,7 +36,8 @@ services:
       #execute below script to get full access on external local storage
       #sudo chown -R www-data:www-data /Media
       #sudo chmod -R 0750 /Media
-
+      #else execute this line alone for the folder
+      #sudo chmod -R 777 /Media
   mariadb:
     image: mariadb:10.5
     #network_mode: bridge
