--- a/nginx-proxymanager/docker-compose.yml
+++ b/nginx-proxymanager/docker-compose.yml
@@ -1,9 +1,20 @@
 version: '2'
+
+networks:
+  proxy:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.20.0.0/16 #Custom Range
+
 services:
   proxy-manager:
     container_name: proxy-manager
     image: 'jc21/nginx-proxy-manager:latest'
-    network_mode: bridge
+    #network_mode: bridge
+    networks:
+          proxy:
+            ipv4_address: 172.20.0.11 # Custom Ip address
     restart: unless-stopped
     ports:
       - '80:80'
