--- a/nginx-proxymanager/docker-compose.yml
+++ b/nginx-proxymanager/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       - '81:81'
       - '443:443'
     volumes:
-      - '/proxymanager/data:/data'
-      - '/proxymanager/letsencrypt:/etc/letsencrypt'
+      - 'proxymanager/data:/data'
+      - 'proxymanager/letsencrypt:/etc/letsencrypt'
