--- a/Jellyfin/docker-compose.yml
+++ b/Jellyfin/docker-compose.yml
@@ -1,14 +1,13 @@
-version: '3'
 services:
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
-    user: "${UID}:${GID}"
+    #user: "${UID}:${GID}"
     network_mode: bridge
     volumes:
-      - /jellyfin/config:/config
-      - /Media/cache:/cache
-      - /Media:/media:ro
+      - /volume1/docker/jellyfin/config:/config
+      - /volume1/Movies/cache:/cache
+      - /volume1/Movies/Media:/media #:ro
     ports:
       - 8096:8096
     restart: unless-stopped
