--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - TZ=Aisa/Kolkata
       - WEBUI_PORT=8082
     volumes:
-      - /qbittorrent/config:/config
+      - /volume1/qbittorrent/config:/config
       - /volume1/Movies/Media/downloads:/downloads
     ports:
       - 6881:6881
