--- a/jdownloader-2/docker-compose.yml
+++ b/jdownloader-2/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   jdownloader-2:
     container_name: jdownloader-2
@@ -7,10 +6,10 @@ services:
     ports:
       - 5800:5800
     volumes:
-      - /jdownloader2/config:/config:rw
-      - /Media:/output:rw
+      - /volume1/docker/jdownloader2/config:/config:rw
+      - /volume1/docker/jdownloader2/downloads:/output:rw
     env_file:
-      - /data/secret.env
+      - /volume1/docker/secret.env
    # environment: 
    #   MYJD_USER: email@email.com #from the myjdownloader.org free account 
    #   MYJD_PASSWORD: password
