--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       #- PUID=1000
       #- PGID=1000
-      - TZ=Aisa/Kolkata
+      - TZ=Asia/Kolkata
       - WEBUI_PORT=8082
     volumes:
       - /volume1/docker/qbittorrent/config:/config
