--- a/Jellyfin/docker-compose.yml
+++ b/Jellyfin/docker-compose.yml
@@ -10,4 +10,6 @@ services:
       - /volume1/Movies/Media:/media #:ro
     ports:
       - 8096:8096
+    devices: #include only if you have intel/amd gpu
+      - /dev/dri:/dev/dri
     restart: unless-stopped
