--- a/jdownloader-2/docker-compose.yml
+++ b/jdownloader-2/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - /volume1/docker/jdownloader2/config:/config:rw
       - /volume1/docker/jdownloader2/downloads:/output:rw
     env_file:
-      - /data/secret.env
+      - /data/secret.env #Portainer data folder
     environment: 
       SECURE_CONNECTION: 1
       WEB_AUTHENTICATION: 1
