--- a/homepage/docker-compose.yml
+++ b/homepage/docker-compose.yml
@@ -11,20 +11,5 @@ services:
       - /volume1/docker/homepage/config:/app/config
       - /volume1/docker/homepage/images:/app/images  
       - /volume1/docker/homepage/icons:/app/icons  
-    restart: unless-stopped
-  
-  # (Optional) For secure docker socket integration
-  dockerproxy:
-    image: ghcr.io/tecnativa/docker-socket-proxy:latest
-    container_name: dockerproxy
-    network_mode: bridge
-    environment:
-      - CONTAINERS=1 # Allow access to viewing containers
-      - SERVICES=1 # Allow access to viewing services (necessary when using Docker Swarm)
-      - TASKS=1 # Allow access to viewing tasks (necessary when using Docker Swarm)
-      - POST=0 # Disallow any POST operations (effectively read-only)
-    ports:
-      - 127.0.0.1:2375:2375
-    volumes:
-      - /run/docker.sock:/run/docker.sock:ro # Mounted as read-only
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     restart: unless-stopped
