--- a/homepage/docker-compose.yml
+++ b/homepage/docker-compose.yml
@@ -12,4 +12,13 @@ services:
       - /volume1/docker/homepage/images:/app/images  
       - /volume1/docker/homepage/icons:/app/icons  
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    env_file:
+      - /data/secret.env #Portainer data folder
+    environment:
+      - LOG_LEVEL=debug
+      - HOMEPAGE_VAR_AGH_URL=${HOMEPAGE_VAR_AGH_URL}
+      - HOMEPAGE_VAR_AGH_USERNAME=${HOMEPAGE_VAR_AGH_USERNAME}      
+      - HOMEPAGE_VAR_AGH_PASSWORD=${HOMEPAGE_VAR_AGH_PASSWORD}
+      - HOMEPAGE_VAR_PORTAINER_URL=${HOMEPAGE_VAR_PORTAINER_URL}
+      - HOMEPAGE_VAR_PORTAINER_KEY=${HOMEPAGE_VAR_PORTAINER_KEY}
     restart: unless-stopped
