--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -2,14 +2,24 @@ services:
   netdata:
     image: netdata/netdata:latest
     container_name: netdata
-    ports:
-      - 19999:19999
+    pid: host
+    network_mode: host
     restart: unless-stopped
     cap_add:
       - SYS_PTRACE
+      - SYS_ADMIN
     security_opt:
       - apparmor:unconfined
     volumes:
+      - /volume1/docker/netdata/config:/etc/netdata #Config
+      - /volume1/docker/netdata/lib:/var/lib/netdata #Config
+      - /volume1/docker/netdata/cache:/var/cache/netdata #Config
+      - /:/host/root:ro,rslave
+      - /etc/passwd:/host/etc/passwd:ro
+      - /etc/group:/host/etc/group:ro
+      - /etc/localtime:/etc/localtime:ro
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
+      - /etc/os-release:/host/etc/os-release:ro
+      - /var/log:/host/var/log:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
