--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - /volume1/docker/netdata/lib:/var/lib/netdata #Config
       - /volume1/docker/netdata/cache:/var/cache/netdata #Config
       - /:/host/root:ro
+      - /etc/VERSION:/etc/os-release:ro
       - /etc/passwd:/host/etc/passwd:ro
       - /etc/group:/host/etc/group:ro
       - /etc/localtime:/etc/localtime:ro
