--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -23,3 +23,4 @@ services:
       - /sys:/host/sys:ro
       - /var/log:/host/var/log:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /run/dbus:/run/dbus:ro
