--- a/speedtest/docker-compose.yml
+++ b/speedtest/docker-compose.yml
@@ -3,11 +3,12 @@ services:
         container_name: speedtest-tracker
         ports:
             - 9100:80
-            - 9101:443
+            #- 9101:443
         environment:
             - APP_KEY=base64:DDmUvzlrJTykO5JwjRIrUvjfU6LQuYjUjybyjxaCxbQ= # How to generate an app key: https://speedtest-tracker.dev/
             - DB_CONNECTION=sqlite
             - APP_TIMEZONE=Asia/Kolkata
+            - PUBLIC_DASHBOARD=true
             - SPEEDTEST_SCHEDULE=0 */1 * * * # optional: schedule a speedtest with an cronjob https://crontab.guru
         volumes:
             - /volume1/docker/speedtest:/config
