--- a/nginx-proxymanager/docker-compose.yml
+++ b/nginx-proxymanager/docker-compose.yml
@@ -11,5 +11,7 @@ services:
     volumes:
       - /volume1/docker/proxymanager/data:/data
       - /volume1/docker/proxymanager/letsencrypt:/etc/letsencrypt
+      #Advanced global config setup for authentik domain level forward proxy
+      #Replace the _access.conf file which used to generate the access list
       - /volume1/docker/proxymanager/custom/server_proxy.conf:/data/nginx/custom/server_proxy.conf
       - /volume1/docker/proxymanager/custom/custom_access.conf:/app/templates/_access.conf:ro
