--- a/Jellyfin/docker-compose.yml
+++ b/Jellyfin/docker-compose.yml
@@ -1,9 +1,13 @@
+networks:
+    internal:
+      external: true
+
 services:
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
     #user: "${UID}:${GID}"
-    network_mode: bridge
+    #network_mode: bridge
     volumes:
       - /volume1/docker/jellyfin/config:/config
       - /volume1/Movies/cache:/cache
@@ -16,3 +20,5 @@ services:
       #- /dev/dri/renderD128:/dev/dri/renderD128
       #- /dev/dri/card0:/dev/dri/card0
     restart: unless-stopped
+    networks:
+      - internal
