--- a/Jellyfin/docker-compose.yml
+++ b/Jellyfin/docker-compose.yml
@@ -6,19 +6,20 @@ services:
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
-    #user: "${UID}:${GID}"
-    #network_mode: bridge
     volumes:
       - /volume1/docker/jellyfin/config:/config
       - /volume1/Movies/cache:/cache
       - /volume1/Movies/Series:/data/tvshows
       - /volume1/Movies/Media:/data/movies #:ro
-    ports:
-      - 8096:8096
+    restart: unless-stopped
+    networks:
+      - internal
     devices: #include only if you have intel/amd gpu
       - /dev/dri/:/dev/dri/
       #- /dev/dri/renderD128:/dev/dri/renderD128
       #- /dev/dri/card0:/dev/dri/card0
-    restart: unless-stopped
-    networks:
-      - internal
+    #ports:
+    #  - 8096:8096
+    #user: "${UID}:${GID}"
+    #network_mode: bridge
+
