--- a/adguardhome/docker-compose.yml
+++ b/adguardhome/docker-compose.yml
@@ -29,3 +29,6 @@ services:
         #    - 784:784/udp
         #    - 3001:3000/tcp
         #    - 3001:3000/udp
+
+
+# hostsfile_enabled: true Add this in config fiel
