--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 services:
   postgresql:
     image: docker.io/library/postgres:16-alpine
-    container_name: postgresql
+    container_name: authentik-postgresql
     restart: unless-stopped
     volumes:
       - /volume1/docker/authentik/db:/var/lib/postgresql/data
@@ -18,7 +18,7 @@ services:
       
   redis:
     image: docker.io/library/redis:alpine
-    container_name: redis
+    container_name: authentik-redis
     command: --save 60 1 --loglevel warning
     restart: unless-stopped
     volumes:
@@ -32,8 +32,8 @@ services:
     restart: unless-stopped
     command: server
     environment:
-      AUTHENTIK_REDIS__HOST: redis
-      AUTHENTIK_POSTGRESQL__HOST: postgresql
+      AUTHENTIK_REDIS__HOST: authentik-redis
+      AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTHENTIK_PG_PASS:-authentik}
@@ -47,8 +47,8 @@ services:
     #  - "9010:9000"
     #  - "9011:9443"
     depends_on:
-      - postgresql
-      - redis
+      - authentik-postgresql
+      - authentik-redis
     networks:
       - internal
       
@@ -58,8 +58,8 @@ services:
     restart: unless-stopped
     command: worker
     environment:
-      AUTHENTIK_REDIS__HOST: redis
-      AUTHENTIK_POSTGRESQL__HOST: postgresql
+      AUTHENTIK_REDIS__HOST: authentik-redis
+      AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTHENTIK_PG_PASS:-authentik}
@@ -72,7 +72,7 @@ services:
       - /volume1/docker/authentik/data/media:/media
       - /volume1/docker/authentik/data/templates:/templates
     depends_on:
-      - postgresql
-      - redis
+      - authentik-postgresql
+      - authentik-redis
     networks:
       - internal
