--- a/adguardhome/docker-compose.yml
+++ b/adguardhome/docker-compose.yml
@@ -14,6 +14,7 @@ services:
             - /volume1/docker/AdGuardData/workdir:/opt/adguardhome/work
             - /volume1/docker/AdGuardData/confdir:/opt/adguardhome/conf
             - /volume1/docker/AdGuardData/certdir:/opt/adguardhome/cert # For SSL Certificates path
+            - /etc/localtime:/etc/localtime:ro
         #ports:
         #    - 53:53/tcp
         #    - 53:53/udp
