--- a/adguardhome/docker-compose.yml
+++ b/adguardhome/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             - /volume1/docker/AdGuardData/confdir:/opt/adguardhome/conf
             - /volume1/docker/AdGuardData/certdir:/opt/adguardhome/cert # For SSL Certificates path
             - /etc/localtime:/etc/localtime:ro
+            - /etc/timezone:/etc/timezone:ro
         #ports:
         #    - 53:53/tcp
         #    - 53:53/udp
