--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY:-authentik}
       AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD:-authentik}
       AUTHENTIK_LOG_LEVEL: warning
+      COMPOSE_PORT_HTTP: 80
+      COMPOSE_PORT_HTTPS: 443
     volumes:
       - /volume1/docker/authentik/data/media:/media
       - /volume1/docker/authentik/data/templates:/templates
