--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - /volume1/docker/authentik/data/media:/media
       - /volume1/docker/authentik/data/templates:/templates
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+      - /etc/TZ:/etc/timezone:ro
     #ports:
     #  - "9010:9000"
     #  - "9011:9443"
@@ -58,7 +58,7 @@ services:
       - /volume1/docker/authentik/data/media:/media
       - /volume1/docker/authentik/data/templates:/templates
       - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
+      - /etc/TZ:/etc/timezone:ro
     depends_on:
       - authentik-postgresql
       - authentik-redis
