--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTHENTIK_PG_PASS:-authentik}
-      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY:-authentik}
-      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD:-authentik}
+      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY}
+      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
       AUTHENTIK_LOG_LEVEL: warning
       COMPOSE_PORT_HTTP: 80
       COMPOSE_PORT_HTTPS: 443
@@ -49,8 +49,8 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
-      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTHENTIK_PG_PASS:-authentik}
-      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY:-authentik}
+      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY}
+      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
       AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD:-authentik}
       AUTHENTIK_LOG_LEVEL: warning
     volumes:
