--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
-      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTHENTIK_PG_PASS}
-      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY}
+      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS}
+      AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY}
       AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
       AUTHENTIK_LOG_LEVEL: warning
       COMPOSE_PORT_HTTP: 80
@@ -49,8 +49,8 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
-      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTHENTIK_PG_PASS}
-      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY}
+      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS}
+      AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY}
       AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
       AUTHENTIK_LOG_LEVEL: warning
     volumes:
