--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
+      AUTH_PG_PASS: ${AUTH_PG_PASS}
+      AUTH_SECRET_KEY: ${AUTH_SECRET_KEY}
+      COMMON_PASSWORD: ${COMMON_PASSWORD}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS}
       AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY}
       AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
@@ -49,6 +52,9 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
+      AUTH_PG_PASS: ${AUTH_PG_PASS}
+      AUTH_SECRET_KEY: ${AUTH_SECRET_KEY}
+      COMMON_PASSWORD: ${COMMON_PASSWORD}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS}
       AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY}
       AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
