--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -17,12 +17,9 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
-      AUTH_PG_PASS: ${AUTH_PG_PASS}
-      AUTH_SECRET_KEY: ${AUTH_SECRET_KEY}
-      COMMON_PASSWORD: ${COMMON_PASSWORD}
-      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS}
-      AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY}
-      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
+      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS:-authentik}
+      AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY:-authentik}
+      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD:-authentik}
       AUTHENTIK_LOG_LEVEL: warning
       COMPOSE_PORT_HTTP: 80
       COMPOSE_PORT_HTTPS: 443
@@ -52,12 +49,9 @@ services:
       AUTHENTIK_POSTGRESQL__HOST: authentik-postgresql
       AUTHENTIK_POSTGRESQL__USER: ${AUTHENTIK_PG_USER:-authentik}
       AUTHENTIK_POSTGRESQL__NAME: ${AUTHENTIK_PG_DB:-authentik}
-      AUTH_PG_PASS: ${AUTH_PG_PASS}
-      AUTH_SECRET_KEY: ${AUTH_SECRET_KEY}
-      COMMON_PASSWORD: ${COMMON_PASSWORD}
-      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS}
-      AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY}
-      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD}
+      AUTHENTIK_POSTGRESQL__PASSWORD: ${AUTH_PG_PASS:-authentik}
+      AUTHENTIK_SECRET_KEY: ${AUTH_SECRET_KEY:-authentik}
+      AUTHENTIK_BOOTSTRAP_PASSWORD: ${COMMON_PASSWORD:-authentik}
       AUTHENTIK_LOG_LEVEL: warning
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
